# GenericDBConnections

./: .gitignore  README.md  connections.example.yml  env_vars.example.ps1  pyproject.toml  scaffold_generic_connections_dlt.py
.github/workflows/: ci.yml  connection-test.yml
examples/: DltPipeline.py
src/generic_connections/: __init__.py
src/generic_connections/cli/: Tester.py
src/generic_connections/core/: BaseConnection.py  ConnectionConfig.py  ExpandEnv.py  PlatformRegistry.py  __init__.py  dict_to_query.py  register_platform.py
src/generic_connections/io/: LoadConnectionsYaml.py  __init__.py  load_connections_yaml.py
tests/: test_url_building.py  test_yaml_parsing.py
