[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-connections"
version = "0.2.0"
description = "Granular SQLAlchemy connection wrappers driven by YAML (DLT-ready)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Team" }]
dependencies = [
  "SQLAlchemy>=2.0.0",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9; platform_system!='Windows'",
            "psycopg2-binary>=2.9; platform_system=='Windows'"]
mssql = ["pyodbc>=5.0.0"]
teradata = ["teradatasql", "teradatasqlalchemy"]
dlt = ["dlt>=1.5"]
dev = ["ruff>=0.6", "black>=24.3", "mypy>=1.10", "pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
conn-tester = "generic_connections.cli.Tester:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
